karpenter/set-karpenter-non-cpu-limits/.chainsaw-test/pod-others-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test5
  namespace: test
spec:
  containers:
    - name: test5-01
      image: ghcr.io/kyverno/test-busybox:1.35
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
          ephemeral-storage: "1Gi"
        requests:
          cpu: "1"
          memory: "1Gi"
          ephemeral-storage: "1Gi"
    - name: test5-02
      image: ghcr.io/kyverno/test-busybox:1.35
      resources:
        limits:
          cpu: "1"
          memory: "500Mi"
          ephemeral-storage: "600Mi"
        requests:
          cpu: "1"
          memory: "500Mi"
          ephemeral-storage: "600Mi"
