karpenter/set-karpenter-non-cpu-limits/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-karpenter-non-cpu-limits
status:
  ready: true
