karpenter/set-karpenter-non-cpu-limits/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: set-karpenter-non-cpu-limits
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../set-karpenter-non-cpu-limits.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: ../.kyverno-test/resources.yaml
    - apply:
        file: podcontroller-resources.yaml
    - apply:
        file: pod-others.yaml
  - name: step-03
    try:
    - assert:
        file: ../.kyverno-test/pod-memory-patched1.yaml
    - assert:
        file: ../.kyverno-test/pod-memory-patched2.yaml
    - assert:
        file: ../.kyverno-test/pod-memory-patched3.yaml
    - assert:
        file: ../.kyverno-test/pod-memory-patched4.yaml
    - assert:
        file: ../.kyverno-test/pod-ephemeral-storage-patched1.yaml
    - assert:
        file: ../.kyverno-test/pod-ephemeral-storage-patched2.yaml
    - assert:
        file: ../.kyverno-test/pod-ephemeral-storage-patched3.yaml
    - assert:
        file: ../.kyverno-test/pod-ephemeral-storage-patched4.yaml
    - assert:
        file: podcontroller-patched.yaml
    - assert:
        file: pod-others-patched.yaml
